# android_kernel_xiaomi_sm7325

./: .gitignore  Android.mk  Kbuild  MAINTAINERS  Makefile  Makefile.am  aw8671x.c  aw8692x.c  aw8693x.c  gen_headers_arm.bp  gen_headers_arm64.bp  haptic_hv.h  kbuild  redwood-sm7325-camera-sensor.dtsi  redwood-sm7325-sde-display.dtsi  shima-camera.dtsi  touch_driver_board.mk  touch_driver_product.mk  yupik-camera.dtsi  yupik-sde-common.dtsi
android/: abi_gki_aarch64_xiaomi
arch/: Kconfig
block/: Kconfig  blk-iocost.c  blk-merge.c  elevator.c
config/: gki_lahainatouch.conf  gki_lahainatouchconf.h
crypto/: Kconfig  Makefile  api.c  cryptd.c  crypto_engine.c
drivers/: Kconfig  Makefile
dsp/: adsp-loader.c
fs/: aio.c  block_dev.c  buffer.c  compat_ioctl.c  dcache.c  exec.c  io_uring.c  ioctl.c  libfs.c  mpage.c  open.c  read_write.c  seq_file.c  stat.c  userfaultfd.c
goodix_berlin_driver/: goodix_brl_hw.c  goodix_brl_spi.c  goodix_ts_core.c  goodix_ts_core.h  goodix_ts_gesture.c  goodix_ts_inspect.c
hv_haptics/: aw8671x.c  aw8692x.c  aw8693x.c  aw869x.c  aw869xx.c  haptic_hv.c  haptic_hv.h
init/: Kconfig  Kconfig.gki  do_mounts.c  init_task.c  main.c
ipc/: shm.c  util.c
kernel/: Makefile  acct.c  cpu.c  exit.c  fork.c  futex.c  irq_work.c  kallsyms.c  kthread.c  module.c  panic.c  profile.c  reboot.c  smp.c  softirq.c  sys.c  sysctl.c  workqueue.c
lib/: Kconfig  Kconfig.debug  Makefile  cpumask.c  iov_iter.c  radix-tree.c
mm/: Kconfig  Makefile  compaction.c  filemap.c  frame_vector.c  gup.c  huge_memory.c  hugetlb.c  init-mm.c  internal.h  ksm.c  (+34 more)
(+1231 files in other folders)
